--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,13 +2,20 @@ project:
   type: website
 
 website:
-  title: "dd"
+  title: GrasWurzelGrün
+  favicon: images/grass_2.jpg
   navbar:
+    logo: images/grass_2.jpg
     left:
       - href: index.qmd
-        text: Home
-      - about.qmd
-
+        text: Start
+      - news.qmd
+  cookie-consent:
+    type: express
+  page-footer: "[Impressum](/impressum.qmd) - [Datenschutzerklärung](/datenschutzerklaerung.qmd)"
+  twitter-card: true
+  open-graph: true
+  image: images/grass_2.jpg
 format:
   html:
     theme: cosmo
