--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ website:
     left:
       - href: index.qmd
         text: Start
+      - petition.qmd
       # - news.qmd
   cookie-consent:
     type: express
